--- a/games/games/css.css
+++ b/games/games/css.css
@@ -117,4 +117,4 @@
 			font-size: 12px;
 			letter-spacing: 0.05em;
 		}
-body, a:link{cursor:url(https://mrcomer.space/assets/img/cursor/cursor.cur), default;} a:hover {cursor:url(https://mrcomer.space/assets/img/cursor/cursor2.cur),pointer;}
+body, a:link{cursor:url(https://rein.tk/assets/img/cursor/cursor.cur), default;} a:hover {cursor:url(https://rein.tk/assets/img/cursor/cursor2.cur),pointer;}
